--- a/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
+++ b/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
@@ -121,11 +121,793 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### 3.22 e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MID-ADD1 in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MID-ADD1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun mid-add1 (x)\n",
+    "    (let ((a (car (cdr x))))\n",
+    "         (list (car x) (+ 1 a) (caddr x))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(TAKE 3 COOKIES)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(mid-add1 '(take 2 cookies))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.22 f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::F-TO-C in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "F-TO-C"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun f-to-c (f)\n",
+    "    (/ (* (- f 32) 5) 9.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-12.777778"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(f-to-c 9)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.22 g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TYPE-WARNING: \n",
+      "Derived type of\n",
+      "  T and NIL\n",
+      "in\n",
+      "  (ZEROP X)\n",
+      "is\n",
+      "  (VALUES BOOLEAN &OPTIONAL),\n",
+      "conflicting with their asserted type\n",
+      "  NUMBER.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "FOO"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun foo (x)\n",
+    "    (+ 1 (zerop x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SIMPLE-TYPE-ERROR: \n",
+      "Value from T or NIL of (ZEROP X) in(+ 1 (ZEROP X)) is NIL, not a NUMBER.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(foo 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<FUNCTION (LAMBDA (X) :IN \"/home/jeremiah/code/cl-jupyter/cl-jupyter.lisp\") {530EB99B}>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda (x) (* 2 x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UNDEFINED-FUNCTION: \n",
+      "  #<UNDEFINED-FUNCTION X {1003A90CD3}>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lamba (x) (* x x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<FUNCTION (LAMBDA (X) :IN \"/home/jeremiah/code/cl-jupyter/cl-jupyter.lisp\") {530EC0DB}>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda (x) (+ x 1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MAKE-EVEN in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MAKE-EVEN"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun make-even(x)\n",
+    "    (if (oddp x) (+ x 1) x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(make-even 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::FURTHER in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "FURTHER"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun further (x)\n",
+    "    (if (< x 0) (- x 1) (+ x 1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(further 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MY-NOT in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MY-NOT"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun my-not (x)\n",
+    "    (if x nil t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(my-not t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::ORDERED in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ORDERED"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun ordered (x y)\n",
+    "    (if (< x y) (list x y) (list y x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2 2)"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(ordered 2 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2, 3, 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MY-ABS in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MY-ABS"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun my-abs (x)\n",
+    "    (cond ((< x 0) (- x))\n",
+    "        ((> x 0) x)\n",
+    "        (t x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(my-abs -4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::EMPHASIZE3 in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "EMPHASIZE3"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun emphasize3 (x)\n",
+    "    (cond ((equal (first x) 'good) (cons 'great (rest x)))\n",
+    "           ((equal (first x) 'bad) (cons 'awful (rest x)))\n",
+    "        (t (cons 'very x))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(AWFUL LONG DAY)"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(emphasize3 '(bad long day))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MAKE-ODD in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MAKE-ODD"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun make-odd (x)\n",
+    "    (cond ((not (oddp x)) (+ x 1))\n",
+    "        (t x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(make-odd 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::CONSTRAIN in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CONSTRAIN"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun constrain (x max min)\n",
+    "           (cond ((< min x) min)\n",
+    "                 ((> max x) max)\n",
+    "                 (t x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(constrain 92 -50 50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::FIRSTZERO in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "FIRSTZERO"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun firstzero (x)\n",
+    "    (let ((firstw (car x))\n",
+    "         (secondw (cadr x))\n",
+    "         (thirdw (caddr x)))\n",
+    "         (cond ((eq firstw 0) 'first)\n",
+    "             ((eq secondw 0) 'second)\n",
+    "             ((eq thirdw 0) 'third))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SECOND"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(firstzero '(3 0 4))"
+   ]
   }
  ],
  "metadata": {
