--- a/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
+++ b/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +900,7 @@
        "SECOND"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,6 +908,259 @@
    "source": [
     "(firstzero '(3 0 4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::CYCLE in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CYCLE"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun cycle (x)\n",
+    "    (cond ((< x 1) 'invalid)\n",
+    "        ((= x 99) 1)\n",
+    "        ((> x 99) 'invalid)\n",
+    "        (t (+ x 1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "INVALID"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(cycle 100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::HOWCOMPUTE in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "HOWCOMPUTE"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun howcompute (x y z)\n",
+    "    (cond ((eq (+ x y) z) 'sum-of)\n",
+    "        ((eq (* x y) z) 'product-of)\n",
+    "        ((eq (- x y) z) 'subtract-from)\n",
+    "        (t '(beats me))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SUBTRACT-FROM"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(howcompute 7 4 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::GEQ in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GEQ"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun geq (x y)\n",
+    "    (or (> x y) (= x y)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(geq 4 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::SQ-DBL in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SQ-DBL"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun sq-dbl (x)\n",
+    "    (cond ((and (oddp x) (> x 0)) (* x x))\n",
+    "          ((and (oddp x) (< x 0)) (* x 2))\n",
+    "          (t (/ x 2))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-6"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sq-dbl -3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
