--- a/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
+++ b/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
@@ -1157,10 +1157,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::CHILAD in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CHILAD"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun chilad (x y)\n",
+    "    (cond ((and (or (string= x 'boy) (string= x 'girl)) (string= y 'child) t))\n",
+    "          ((and (or (string= x 'man) (string= x 'woman)) (string= y 'adult) t))\n",
+    "          (t nil)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "T"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(chilad 'girl 'child)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.29"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::LOGICAL-AND-2 in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LOGICAL-AND-2"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun logical-and-2 (x y)\n",
+    "    (if x (if y t)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::LOGICAL-AND-3 in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LOGICAL-AND-3"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun logical-and-3 (x y)\n",
+    "      (cond (x (cond (y t)))\n",
+    "            (t nil)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "T"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(logical-and-2 t 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::LOGICAL-OR in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LOGICAL-OR"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun logical-or (x y)\n",
+    "    (cond (x t)\n",
+    "          (y t)\n",
+    "          (t nil)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "T"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(logical-or nil t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.31"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MY-NOT in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MY-NOT"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun my-not (x)\n",
+    "    (if x nil t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NIL"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(my-not t)"
+   ]
   }
  ],
  "metadata": {
