--- a/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
+++ b/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
@@ -1359,24 +1359,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "REDEFINITION-WITH-DEFUN: \n",
-      "  redefining CL-JUPYTER-USER::MY-NOT in DEFUN\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "MY-NOT"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1397,13 +1389,398 @@
        "NIL"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "(my-not t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::MAKE-CDR in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "MAKE-CDR"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun make-cdr (lst)\n",
+    "    (setf lst (cdr lst))\n",
+    "    lst)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GOOD-STYLE"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun good-style (q)\n",
+    "    (let ((q (+ q 5)))\n",
+    "         (list 'result 'is q)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(RESULT IS 11)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(good-style 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "anything affecting state other than the returned value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "scope"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so as to not evaluate variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "yes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5.6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "THROW-DIE"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun throw-die ()\n",
+    "    (+ 1 (random 6)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "THROW-DICE"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun throw-dice()\n",
+    "    (list (throw-die) (throw-die)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::SNAKE-EYES-P in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "SNAKE-EYES-P"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun snake-eyes-p (dice)\n",
+    "    (and (eq 1 (car dice)) (eq 1 (cadr dice)) t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BOXCARS-P"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun boxcars-p (dice)\n",
+    "    (and (eq 6 (car dice)) (eq 6 (cadr dice)) t))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::INSTANT-WIN-P in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "INSTANT-WIN-P"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun instant-win-p (dice)\n",
+    "    (let ((dicesum (+ (car dice) (cadr dice))))\n",
+    "         (cond ((= dicesum 7) t)\n",
+    "               ((= dicesum 11) t)\n",
+    "               (t nil))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::INSTANT-LOSS-P in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "INSTANT-LOSS-P"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun instant-loss-p (dice)\n",
+    "    (let ((dicesum (+ (car dice) (cadr dice))))\n",
+    "         (cond ((= dicesum 2) t)\n",
+    "               ((= dicesum 3) t)\n",
+    "               ((= dicesum 12) t)\n",
+    "               (t nil))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SAY-THROW"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun say-throw (dice)\n",
+    "    (cond ((snake-eyes-p dice) 'snake-eyes)\n",
+    "          ((boxcars-p dice) 'boxcars)\n",
+    "          (t (+ (car dice) (cadr dice)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::CRAPS in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CRAPS"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun craps ()\n",
+    "    (let* (\n",
+    "           (dice (throw-dice))\n",
+    "           (d1 (car dice))\n",
+    "           (d2 (cadr dice))\n",
+    "          )\n",
+    "          (cond ((instant-win-p dice) (list 'throw d1 'and d2 '-- (say-throw dice) '-- 'you 'win))\n",
+    "                ((instant-loss-p dice) (list 'throw d1 'and d2 '-- (say-throw dice) '-- 'you 'lose))\n",
+    "                (t (list 'throw d1 'and d2 '-- 'your 'point 'is (say-throw dice))))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(THROW 1 AND 1 -- SNAKE-EYES -- YOU LOSE)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(craps)"
    ]
   }
  ],
