--- a/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
+++ b/touretzky3ed/CommonLispAGentleIntroduction3ed-Touretzky.ipynb
@@ -1570,16 +1570,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "SIMPLE-STYLE-WARNING: \n",
+      "  undefined function: THROW-DIE\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "THROW-DICE"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1781,6 +1789,61 @@
    ],
    "source": [
     "(craps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "REDEFINITION-WITH-DEFUN: \n",
+      "  redefining CL-JUPYTER-USER::TRY-FOR-POINT in DEFUN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TRY-FOR-POINT"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(defun try-for-point (x)\n",
+    "   (let* ((dice (throw-dice))\n",
+    "         (d1 (car dice))\n",
+    "         (d2 (cadr dice))\n",
+    "         (dicesum (+ d1 d2)))\n",
+    "         (cond ((= 7 dicesum) (list 'throw d1 'and d2 '-- dicesum '-- 'you 'lose))\n",
+    "               ((= x dicesum) (list 'throw d1 'and d2 '-- dicesum '-- 'you 'win))\n",
+    "               (t (list 'throw d1 'and d2 '-- dicesum '-- 'throw 'again)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(THROW 2 AND 4 -- 6 -- YOU WIN)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(try-for-point 6)"
    ]
   }
  ],
